<resources>
    <string name="app_name">VidaApp</string>
    <string name="Objetivo">En vida app nos preocupamos por el cambio climático, por esto nuestro objetivo es ayudarte a ahorrar y crear conciencia ecológica.</string>
<<<<<<< HEAD
    <string name="seleccionarServicio">Seleccione el servicio público de tu interés.</string>
    <string name="eventos">26 - Día Nacional de la Eduacion Ambiental</string> //ENE
    <string name="eventos2">05 - Día Internacional de la eficiencia energetica</string> //MAR
    <string name="eventos3">22 - Día Mundial del Agua</string> //MAR
    <string name="eventos4">26 - Día Mundial del Clima</string> //MAR
    <string name="eventos5">29 - Día Nacional del Arbol</string> //ABRI
    <string name="eventos6">16 - Dia Internacional de la Luz</string> //MAY
    <string name="eventos7">5 - Día Mundial del Medio Ambiente</string> //JUN
=======
    <string name="seleccionarServicio">Selecciona el servicio público de tu interés.</string>
    <string name="eventos">26 - Día Nacional de la Eduacion Ambiental</string>
    //ENE
    <string name="eventos2">05 - Día Internacional de la eficiencia energetica</string>
    //MAR
    <string name="eventos3">22 - Día Mundial del Agua</string>
    //MAR
    <string name="eventos4">26 - Día Mundial del Clima</string>
    //MAR
    <string name="eventos5">29 - Día Nacional del Arbol</string>
    //ABRI
    <string name="eventos6">16 - Dia Internacional de la Luz</string>
    //MAY
    <string name="eventos7">5 - Día Mundial del Medio Ambiente</string>
    //JUN
>>>>>>> origin/views_Edward
    <string name="eventos8">28 - Día Mundial del Arbol</string>//JUN
    <string name="eventos9">26 al 31 Semana Mundial del Agua</string>
    //AGO
    <string name="eventos10">4 - Día Mundial de los Animales</string>
    //OCT
    <string name="eventos11">5 - Día Mundial del Suelo</string>
    // DIC
    <string name="textEnergy"><u>Llena todos los campos</u></string>
    <string name="title_activity_gas">GasActivity</string>
    <string name="title_activity_water">WaterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="seleccione_anio">Seleccione un año</string>
    <string name="title_activity_his_const_energy">HisConstEnergyActivity</string>
    <string name="title_activity_his_cons_water">HisConsWaterActivity</string>
    <string name="title_activity_his_cons_gas">HisConsGasActivity</string>
    <string name="Consejos">Consejos</string>
    <string name="success_consume">¿Su consumo no esta en el promedio?</string>
    <string name="recommendation_text">Aquí algunas recomendaciones para que pueda reducir su consumo</string>
    <string name="recommendation_water_1">1. Reducir el tiempo del uso de la ducha. Lo ideal son 5 minutos</string>
    <string name="recommendation_water_2">2. Cerrar la llave del lavamanos mientras se afeita o se cepilla los dientes. </string>
    <string name="recommendation_water_3">3. Revisar que en su casa o apartamento los empaques de las llaves, duchas y tuberías no presenten escapes</string>
    <string name="recommendation_water_4">4. Cuando lave la ropa, use la lavadora con la carga completa. Usar pequeñas cargas desperdicia muchísima agua </string>
    <string name="recommendation_water_5">5. No laves tu carro a chorros de agua, es mejor utilizar el agua en un balde</string>
    <string name="recommendation_electricity_1">1. Cambie los bombillos tradicionales por bombillas LED y ahorrará más del 85% del consumo de energía correspondiente a la iluminación del hogar</string>
    <string name="recommendation_electricity_2">2. Desconecte los cargadores de los aparatos electrónicos de su hogar cuando no los utilice</string>
    <string name="recommendation_electricity_3">3. Mantenga limpia la plancha para que el calor pase de manera más eficiente y consuma menos energía</string>
    <string name="recommendation_electricity_4">4. Use la licuadora en el mayor nivel de velocidad, así consumes 20% menos de energía.</string>
    <string name="recommendation_electricity_5">5. Asegurese que su nevera cierre bien, para que pueda conservar el frío en su interior.</string>
    <string name="recommendation_electricity_6">6. Utilize el microondas para calentar sus comidas, ya que este consume 50% menos energía que un horno convencional</string>
    <string name="recommendation_gas_1">1. Mantén los artefactos de gas en buen estado y con suficiente ventilación en el recinto donde se encuentran para garantizar su correcto funcionamiento</string>
    <string name="recommendation_gas_2">2. No permitas que los menores de edad accionen o jueguen con los artefactos a gas y sus válvulas</string>
    <string name="recommendation_gas_3">3. Verifica frecuentemente y antes de acostarte, que todos los artefactos a gas estén apagados y que las válvulas de paso estén cerradas, para evitar escapes de gas natural</string>
    <string name="recommendation_gas_4">4. Si detectas olor a gas natural, cierra las válvulas del centro de medición y artefactos de gas; no accione aparatos eléctricos ni interruptores; abre las ventanas y puertas dando ventilación suficiente al lugar y comunícate con el prestador del servicio</string>
    <string name="recommendation_gas_5">5. Evite que se derramen líquidos sobre los quemadores, puede apagarse la llama y escaparse el gas natural.</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="contenido">
     \nHola, somos la aplicación “Vida App”\n\n
    \nNos enfocamos en el seguimiento a los consumos de los servicios públicos de una persona (agua, luz y gas).\n\n
    \nUsted como usuario podrá registrar los consumos mensuales, de acuerdo con la factura (consumo del servicio, valor), en caso de su interés podrá registrar los meses anteriores para empezar a hacer seguimiento.\n\n
    \nSe podrá asignar una fecha para generar un recordatorio o alerta para estar pendiente de la consulta y pago de la factura con cada servicio.\n\n
    \nNuestro objetivo es proporcionar a los usuarios una herramienta que les permita tener un control efectivo sobre su consumo en los servicios públicos, fomentando la conciencia sobre el uso responsable de los recursos y brindando recomendaciones para reducir el consumo.\n\n
    \nLa aplicación abordará aspectos de diseño y usabilidad, garantizando una interfaz de usuario amigable e intuitiva y que será:\n\n
    \nSerá fácil de usar.\n\n
    \nPermitirá el registro y seguimiento del consumo en los servicios públicos.\n\n
    \nCalculara y mostrara estadísticas relevantes, como el consumo promedio, máximo y mínimo.\n\n
    \nOfrecerá noticias y/o recomendaciones para reducir el consumo en los servicios públicos.\n\n
    </string>
    <string name="title_activity_natural_gas">NaturalGasActivity</string>

</resources>

