<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F4F1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">



        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/isotipo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="VIDA  APP"
            android:textColor="#2E4A22"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="#18781C"
            android:orientation="horizontal">

        </LinearLayout>
        <LinearLayout
            android:id="@+id/nuevasVistas1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/btnNoticias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Noticias"
                android:textSize="16dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/fuente1"
                android:backgroundTint="@color/fondo1"
                android:textStyle="italic"
                />

            <Button
                android:id="@+id/btnEventos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eventos"
                android:textColor="@color/fuente1"
                android:textSize="16dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo1"
                android:layout_marginEnd="10dp"
                android:textStyle="italic"
                />

            <Button
                android:id="@+id/btnSugerencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Concejos"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fuente"
                android:textStyle="italic"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CONSEJOS"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#71C379"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/baseline_thumb_up_24" />

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/success_consume"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/baseline_checklist_rtl_24"/>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recommendation_text"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3093C1"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_water_drop_24" />

            <LinearLayout
                android:id="@+id/layout_water_recommendations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_water_1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_water_2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_water_3"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_water_4"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_water_5"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#F4ED67"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_lightbulb_24" />

            <LinearLayout
                android:id="@+id/layout_electricity_recommendations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_electricity_1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_electricity_2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_electricity_3"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_electricity_4"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_electricity_5"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_electricity_6"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#6A6A65"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_gas_meter_24" />

            <LinearLayout
                android:id="@+id/layout_gas_recommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_gas_1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_gas_2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_gas_3"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_gas_4"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_gas_5"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:src= "@drawable/back"
            android:layout_gravity="start"
            android:contentDescription="regresar"/>

    </LinearLayout>

</ScrollView>
